modal sizing correct on tablet

--- a/src/App.css
+++ b/src/App.css
@@ -258,14 +258,7 @@
   .modal-content {
     width: 100%;
     height: 100%;
-    /* background-color: rgba(0, 0, 0, 0.8); */
     background-color: #000000;
-    /* top: 50%;
-    left: 50%;
-    margin-left: -50%;
-    margin-top: -28%; */
-    /* border: 1px solid #ffffff;
-    border-radius: 5px; */
   }
 
   .modal-header {
@@ -430,12 +423,6 @@
     background-size: 260px;
   }
   
-  .modal-content {
-    /* width: 950px;
-    height: 530px; */
-    /* margin-top: -20%; */
-  }
-  
   .project-images {
     width: 80%;
     height: 500px;
@@ -479,7 +466,7 @@
 
 .main {
   display: block;
-  height: 200vh;
+  height: fit-content;
 }
 
 .logo {
@@ -524,23 +511,6 @@
   width: 340px;
   height: 255px;
   background-size: 340px;
-}
-
-.modal {
-  right: 0;
-  top: 0;
-}
-
-.modal-content {
-  right: 0;
-  top: 0;
-  left: 0;
-  margin-left: 0px;
-  margin-top: 100vh;
-  width: 100%;
-  height: 100vh;
-  border: none;
-  border-radius: 0px;
 }
 
 .modal-header {
